--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,29 @@ a{
 a:hover{
 	color:#E50914; /*Change link color (on mouse over)*/
 }
+
+.lan {
+    border-radius: 4px;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2);
+    font-family: Courier New;
+    color: #ffffff;
+    font-size: 20px;
+    background: #546E7A;
+    padding: 10px 15px 10px 15px;
+    text-decoration: none;
+    display: inline-block;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: -1;
+    transition: all ease-in-out 200ms;
+}
+
+.lan:hover {
+    text-decoration: none;
+    box-shadow: 0px 5px 11px 0px rgba(0, 0, 0, 0.17);
+}
+
 #teal_bg{
 	z-index:-1;
 	position:fixed;
