--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ a:hover{
     font-family: Courier New;
     color: #ffffff;
     font-size: 20px;
-    background: #546E7A;
+    background: #141516;
     padding: 10px 15px 10px 15px;
     text-decoration: none;
     display: inline-block;
